# Cold-Protein-DTI

./: ,gitignore  .gitignore  AGENTS.md  Makefile  collect_results_metrics.py  dataloader.py  pyproject.toml  split_utils.py  visualize_split_umap.py
config/: experiments.example.yaml  project.env.example
config/benchmarks/: kdbnet_cp-easy.yaml  kdbnet_cp-hard.yaml  scopedti_cp-easy.yaml  scopedti_cp-hard.yaml
config/experiments/: cp_easy_cnn_concat.yaml  cp_easy_esm_finetuned_ban.yaml  cp_hard_esm_frozen_concat.yaml  exprC_cp-easy_esmc_frro2048_ban.yaml  exprC_cp-easy_esmc_frro2048_concat.yaml  exprC_cp-hard_esmc_frro2048_ban.yaml  exprC_cp-hard_esmc_frro2048_concat.yaml  exprS0_cp-easy_cnn_ban.yaml  exprS0_cp-hard_cnn_ban.yaml  exprS0_cp-hard_cnn_concat.yaml  exprS1_cp-easy_cnn_concat.yaml  exprS1_cp-easy_esm_fine_tune_concat.yaml  exprS1_cp-easy_esm_frozen_concat.yaml  exprS1_cp-easy_esm_part_frozen_concat.yaml  (+30 more)
scripts/: bootstrap_remote.sh  build_uv_env.ps1  build_uv_env.sh  download_pretrained_model.py  export_test_predictions.py  prepare_dti_splits.py  prepare_offline_weights.ps1  remote_run.sh  run_exprS1_matrix_linux.sh  run_exprS1_test_windows.ps1  run_exprS2_matrix_linux.sh  run_exprS3_matrix_linux.sh  run_exprS_matrix_ubuntu.sh  run_ff_matrix_linux.sh  run_kdbnet_benchmark.py  run_kdbnet_matrix_linux.sh  run_pre_experiment_test.ps1  run_pre_experiment_test.sh  run_pre_experiment_test_esm.ps1  run_pre_experiment_test_esm.sh  run_scopedti_benchmark.py  run_scopedti_matrix_linux.sh
src/: __init__.py  config.py  eval.py  metrics.py  train.py  utils.py
(+51 files in other folders)
